<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/read_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@color/read_menu_container_bg"
    android:clickable="true"
    android:elevation="@dimen/elevation_app_bar"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">
    <!--页面进度栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/read_tv_pre_chapter"
            style="@style/Read.BottomMenu.Button"
            android:text="@string/read_previous_chapter"/>

        <SeekBar
            android:id="@+id/read_sb_chapter_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dp"
            android:layout_marginRight="8.0dp"
            android:layout_weight="1"
            android:max="100"
            android:maxHeight="1dp"
            android:minHeight="1dp"
            android:progressDrawable="@drawable/bg_read_seek_bar"
            android:thumb="@drawable/thumb_read_seek_bar"
            android:thumbOffset="10dp"/>

        <TextView
            android:id="@+id/read_tv_next_chapter"
            style="@style/Read.BottomMenu.Button"
            android:text="@string/read_next_chapter"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/md_blue_grey_800"/>
    <!--菜单栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/read_tv_category"
            style="@style/Read.BottomMenu.IconButton"
            android:drawableTop="@drawable/ic_read_catalog"
            android:text="@string/read_catalog"/>

        <TextView
            android:id="@+id/read_tv_night_mode"
            style="@style/Read.BottomMenu.IconButton"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/ic_read_mode"
            android:text="@string/read_night"/>


        <TextView
            android:id="@+id/read_tv_setting"
            style="@style/Read.BottomMenu.IconButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawableTop="@drawable/ic_read_setting"
            android:text="@string/read_setting"/>
    </RelativeLayout>
</LinearLayout>