<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/read_menu_container_bg"
    android:orientation="vertical"
    android:paddingBottom="28dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/read_iv_lightness_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/ic_vector_lightness_minus"
            tools:ignore="ContentDescription"/>

        <SeekBar
            android:id="@+id/read_sb_lightness_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:maxHeight="1dp"
            android:minHeight="1dp"
            android:progressDrawable="@drawable/bg_read_seek_bar"
            android:thumb="@drawable/thumb_read_seek_bar"/>

        <ImageView
            android:id="@+id/read_iv_lightness_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:srcCompat="@drawable/ic_vector_lightness_plus"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/read_tv_lightness_system"
            style="@style/Read.Setting.Button"
            android:text="@string/read_setting_lightness_system"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/read_tv_font_size_minus"
            style="@style/Read.Setting.Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/read_setting_font_size_minus"/>

        <TextView
            android:id="@+id/read_tv_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/read_text_primary"
            android:textSize="@dimen/text_size_medium"
            tools:text="45"/>

        <TextView
            android:id="@+id/read_tv_font_size_plus"
            style="@style/Read.Setting.Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/read_setting_font_size_plus"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:id="@+id/read_tv_font_size_default"
            style="@style/Read.Setting.Button"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/read_setting_font_size_default"/>

        <TextView
            android:id="@+id/read_tv_font_setting"
            style="@style/Read.Setting.Button"
            android:text="@string/read_setting_font_setting"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/read_tv_flip_over_cover"
            style="@style/Read.Setting.Button"
            android:layout_weight="1"
            android:text="@string/read_setting_flip_over_cover"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/read_tv_flip_over_simulation"
            style="@style/Read.Setting.Button"
            android:layout_weight="1"
            android:text="@string/read_setting_flip_over_simulation"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/read_tv_flip_over_slide"
            style="@style/Read.Setting.Button"
            android:layout_weight="1"
            android:text="@string/read_setting_flip_over_slide"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/read_tv_flip_over_none"
            style="@style/Read.Setting.Button"
            android:layout_weight="1"
            android:text="@string/read_setting_flip_over_none"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.youshibi.app.ui.widget.ShapeView
            style="@style/Read.Setting.ThemeView"
            android:id="@+id/read_theme_white"
            app:super_solidColor="@color/read_theme_white_page_background"
            app:super_solidColor_selected="@color/read_theme_white_page_background"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.youshibi.app.ui.widget.ShapeView
            style="@style/Read.Setting.ThemeView"
            android:id="@+id/read_theme_amber"
            app:super_solidColor="@color/read_theme_amber_page_background"
            app:super_solidColor_selected="@color/read_theme_amber_page_background"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <com.youshibi.app.ui.widget.ShapeView
            style="@style/Read.Setting.ThemeView"
            android:id="@+id/read_theme_green"
            app:super_solidColor="@color/read_theme_green_page_background"
            app:super_solidColor_selected="@color/read_theme_green_page_background"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.youshibi.app.ui.widget.ShapeView
            style="@style/Read.Setting.ThemeView"
            android:id="@+id/read_theme_brown"
            app:super_solidColor="@color/read_theme_brown_page_background"
            app:super_solidColor_selected="@color/read_theme_brown_page_background"/>


        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.youshibi.app.ui.widget.ShapeView
            style="@style/Read.Setting.ThemeView"
            android:id="@+id/read_theme_black"
            app:super_solidColor="@color/read_theme_black_page_background"
            app:super_solidColor_selected="@color/read_theme_black_page_background"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/read_tv_color_setting"
            style="@style/Read.Setting.Button"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_vector_read_setting_more"/>
    </LinearLayout>

</LinearLayout>